<resources>

    <string name="app_name">Reddit Feed</string>
    <string name="app_credit">Submitted by Alvin Yan</string>
    <string name="splash_prompt">Tap to Proceed</string>

    <!-- Process Messages -->
    <string name="loading_000">Searching...\nPlease wait.</string>
    <string name="connect_000">Connection not found.\nPlease try again.</string>
    <string name="connect_001">Retry</string>

    <!-- Menu Tabs for Selection -->
    <string name="menu_tab_0">New</string>
    <string name="menu_tab_1">Hot</string>
    <string name="menu_tab_2">Top</string>
    <string name="menu_tab_3">Rising</string>
    <string name="menu_tab_4">Random</string>

    <string name="menu_tab_5">Options</string>

    <!-- Random Fragment Strings -->
    <string name="random_000">Can\'t decide on a topic?</string>
    <string name="random_001">Well, we got you covered!</string>
    <string name="random_002">Give me something fun!</string>

    <!-- Topic ListView Labels -->
    <string name="topic_000">00</string>
    <string name="topic_001">Topic Title</string>
    <string name="topic_002">(domain)</string>
    <string name="topic_003">by (author)</string>
    <string name="topic_004">to (subreddit)</string>
    <string name="topic_005">submitted on (date)</string>
    <string name="topic_006">(num) comments</string>

</resources>
