<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Randomize Screen Panel -->
    <LinearLayout
        android:id="@+id/random_linear"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/random_text_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/random_000"/>

        <TextView
            android:id="@+id/random_text_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/random_001"/>

        <Button
            android:id="@+id/random_button"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:textSize="15sp"
            android:text="@string/random_002" />

    </LinearLayout>

    <!-- Connection Screen Panel -->
    <LinearLayout
        android:id="@+id/connect_linear"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/connect_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:text="@string/connect_000"/>

        <Button
            android:id="@+id/connect_button"
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:text="@string/connect_001" />

    </LinearLayout>

</LinearLayout>