<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Loading Screen Panel -->
    <LinearLayout
        android:id="@+id/loading_linear"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="@string/loading_000"/>

    </LinearLayout>

    <!-- Connection Screen Panel -->
    <LinearLayout
        android:id="@+id/connect_linear"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/connect_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:text="@string/connect_000"/>

        <Button
            android:id="@+id/connect_button"
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:text="@string/connect_001" />

    </LinearLayout>

    <!-- Displays Data Panel -->
    <ListView
        android:id="@+id/listView_00"
        android:fadeScrollbars="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>